Bug 672024 - Mingw build error: undefined reference to `WinMain@16\' in nsinstall_win.c r=khuey